# hardware-sim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  jmake.sh  main  main.cpp  main.h
inc/: httplib.h  terminal_consts.h
source/: CMakeLists.txt  main.cpp
source/cmake/: FindCURLPP.cmake
source/store/: thing_parser.h  thing_writer.h
source/telemetry/datagen/: data_generator.h
source/telemetry/encoder/: tempCodeRunnerFile.cpp  test_vfdc_encoder.cpp  test_vfdcp_encoder.cpp  vfdc_encoder  vfdc_encoder.cpp  vfdc_encoder.h  vfdcp_encoder.cpp  vfdcp_encoder.h
source/telemetry/object/: telemetry_object.h
source/telemetry/sensors/: sensor.cpp  sensor.h  sensor_collection.h  sensor_coordinator.cpp  sensor_coordinator.h
source/telemetry/stream/: channel  channel.cpp  channel.h  channel_factory.h  stream.cpp  stream.h
source/telemetry/thing/: sensor.cpp  sensor.h  telemetry_thing.cpp  telemetry_thing.h
source/telemetry/transceiver/: transceiver.cpp  transceiver.h  transciever.cpp
source/ui/: session_interface.cpp  session_interface.h
source/ui/state/: state_container.cpp  state_container.h
source/ui/terminal/: telemetry_handler.cpp  telemetry_handler.h  terminal_administrator.cpp  terminal_administrator.h  terminal_consts.h  view_handler.h
storage/: XXX_sensors.txt
test/: main.cpp  test_stream.cpp  test_vfdcp_encoder.cpp
